--- a/src/output.css
+++ b/src/output.css
@@ -11,9 +11,11 @@
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-stone-300: oklch(86.9% 0.005 56.366);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
+    --container-3xl: 48rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -28,6 +30,8 @@
     --text-5xl--line-height: 1;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -187,56 +191,116 @@
   .relative {
     position: relative;
   }
+  .static {
+    position: static;
+  }
+  .sticky {
+    position: sticky;
+  }
+  .top-20 {
+    top: calc(var(--spacing) * 20);
+  }
+  .top-48 {
+    top: calc(var(--spacing) * 48);
+  }
+  .top-\[0px\] {
+    top: 0px;
+  }
+  .top-\[30px\] {
+    top: 30px;
+  }
+  .top-\[130px\] {
+    top: 130px;
+  }
   .top-\[140px\] {
     top: 140px;
-  }
-  .top-\[150px\] {
-    top: 150px;
   }
   .top-\[160px\] {
     top: 160px;
   }
-  .top-\[270px\] {
-    top: 270px;
+  .top-\[180px\] {
+    top: 180px;
   }
-  .right-1 {
-    right: calc(var(--spacing) * 1);
+  .bottom-\[-2px\] {
+    bottom: -2px;
   }
-  .right-4 {
-    right: calc(var(--spacing) * 4);
+  .bottom-\[-8px\] {
+    bottom: -8px;
   }
-  .right-6 {
-    right: calc(var(--spacing) * 6);
+  .bottom-\[-48px\] {
+    bottom: -48px;
   }
-  .right-7 {
-    right: calc(var(--spacing) * 7);
+  .bottom-\[-65px\] {
+    bottom: -65px;
   }
-  .left-2 {
-    left: calc(var(--spacing) * 2);
+  .bottom-\[-70px\] {
+    bottom: -70px;
   }
-  .left-6 {
-    left: calc(var(--spacing) * 6);
+  .bottom-\[-80px\] {
+    bottom: -80px;
   }
-  .left-20 {
-    left: calc(var(--spacing) * 20);
+  .bottom-\[-90px\] {
+    bottom: -90px;
   }
-  .left-64 {
-    left: calc(var(--spacing) * 64);
+  .bottom-\[-100px\] {
+    bottom: -100px;
   }
-  .left-72 {
-    left: calc(var(--spacing) * 72);
+  .bottom-\[-140px\] {
+    bottom: -140px;
   }
-  .left-\[20px\] {
-    left: 20px;
+  .bottom-\[-200px\] {
+    bottom: -200px;
+  }
+  .bottom-\[-230px\] {
+    bottom: -230px;
+  }
+  .bottom-\[-260px\] {
+    bottom: -260px;
+  }
+  .bottom-\[-2340px\] {
+    bottom: -2340px;
+  }
+  .bottom-\[-px\] {
+    bottom: -px;
+  }
+  .bottom-\[8px\] {
+    bottom: 8px;
+  }
+  .bottom-\[140px\] {
+    bottom: 140px;
+  }
+  .bottom-\[160px\] {
+    bottom: 160px;
+  }
+  .bottom-\[px\] {
+    bottom: px;
+  }
+  .left-16 {
+    left: calc(var(--spacing) * 16);
+  }
+  .left-\[10px\] {
+    left: 10px;
+  }
+  .left-\[160\] {
+    left: 160;
+  }
+  .left-\[160px\] {
+    left: 160px;
+  }
+  .left-\[180px\] {
+    left: 180px;
+  }
+  .left-\[230px\] {
+    left: 230px;
+  }
+  .left-\[235px\] {
+    left: 235px;
+  }
+  .left-\[250px\] {
+    left: 250px;
   }
   .left-\[260px\] {
     left: 260px;
-  }
-  .left-\[270px\] {
-    left: 270px;
-  }
-  .z-30 {
-    z-index: 30;
   }
   .col-span-2 {
     grid-column: span 2 / span 2;
@@ -247,29 +311,11 @@
   .col-span-12 {
     grid-column: span 12 / span 12;
   }
-  .container {
-    width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
-    }
-    @media (width >= 48rem) {
-      max-width: 48rem;
-    }
-    @media (width >= 64rem) {
-      max-width: 64rem;
-    }
-    @media (width >= 80rem) {
-      max-width: 80rem;
-    }
-    @media (width >= 96rem) {
-      max-width: 96rem;
-    }
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
   }
   .m-auto {
     margin: auto;
-  }
-  .mt-1 {
-    margin-top: calc(var(--spacing) * 1);
   }
   .flex {
     display: flex;
@@ -280,65 +326,32 @@
   .table {
     display: table;
   }
-  .h-24 {
-    height: calc(var(--spacing) * 24);
-  }
-  .h-40 {
-    height: calc(var(--spacing) * 40);
+  .h-28 {
+    height: calc(var(--spacing) * 28);
   }
   .h-44 {
     height: calc(var(--spacing) * 44);
   }
-  .h-48 {
-    height: calc(var(--spacing) * 48);
+  .h-full {
+    height: 100%;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
-  .w-1\/2 {
-    width: calc(1/2 * 100%);
-  }
-  .w-1\/3 {
-    width: calc(1/3 * 100%);
-  }
-  .w-4 {
-    width: calc(var(--spacing) * 4);
-  }
-  .w-24 {
-    width: calc(var(--spacing) * 24);
-  }
-  .w-40 {
-    width: calc(var(--spacing) * 40);
+  .w-28 {
+    width: calc(var(--spacing) * 28);
   }
   .w-44 {
     width: calc(var(--spacing) * 44);
   }
-  .w-48 {
-    width: calc(var(--spacing) * 48);
-  }
-  .w-50 {
-    width: calc(var(--spacing) * 50);
-  }
-  .w-\[80\] {
-    width: 80;
-  }
-  .w-\[80px\] {
-    width: 80px;
-  }
-  .w-\[100px\] {
-    width: 100px;
-  }
-  .w-\[130px\] {
-    width: 130px;
-  }
   .w-full {
     width: 100%;
   }
-  .w-md {
-    width: var(--container-md);
+  .max-w-3xl {
+    max-width: var(--container-3xl);
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .cursor-pointer {
+    cursor: pointer;
   }
   .resize {
     resize: both;
@@ -355,23 +368,14 @@
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
-  .grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-  .grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
   .grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
-  .grid-cols-10 {
-    grid-template-columns: repeat(10, minmax(0, 1fr));
-  }
-  .grid-cols-11 {
-    grid-template-columns: repeat(11, minmax(0, 1fr));
-  }
   .grid-cols-13 {
     grid-template-columns: repeat(13, minmax(0, 1fr));
+  }
+  .items-center {
+    align-items: center;
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
@@ -399,23 +403,30 @@
     border-style: var(--tw-border-style);
     border-width: 0px;
   }
+  .border-3 {
+    border-style: var(--tw-border-style);
+    border-width: 3px;
+  }
+  .border-black {
+    border-color: var(--color-black);
+  }
+  .border-white {
+    border-color: var(--color-white);
+  }
+  .bg-\[\#2c2f39\] {
+    background-color: #2c2f39;
+  }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
   }
   .bg-gray-800 {
     background-color: var(--color-gray-800);
   }
-  .bg-green-800 {
-    background-color: var(--color-green-800);
-  }
   .bg-stone-300 {
     background-color: var(--color-stone-300);
   }
   .bg-white {
     background-color: var(--color-white);
-  }
-  .object-contain {
-    object-fit: contain;
   }
   .object-cover {
     object-fit: cover;
@@ -426,11 +437,17 @@
   .p-20 {
     padding: calc(var(--spacing) * 20);
   }
-  .p-21 {
-    padding: calc(var(--spacing) * 21);
+  .px-12 {
+    padding-inline: calc(var(--spacing) * 12);
   }
   .px-20 {
     padding-inline: calc(var(--spacing) * 20);
+  }
+  .py-11 {
+    padding-block: calc(var(--spacing) * 11);
+  }
+  .py-12 {
+    padding-block: calc(var(--spacing) * 12);
   }
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
@@ -446,9 +463,6 @@
   }
   .pr-3 {
     padding-right: calc(var(--spacing) * 3);
-  }
-  .pr-20 {
-    padding-right: calc(var(--spacing) * 20);
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
@@ -474,10 +488,6 @@
     font-size: var(--text-base);
     line-height: var(--tw-leading, var(--text-base--line-height));
   }
-  .text-sm {
-    font-size: var(--text-sm);
-    line-height: var(--tw-leading, var(--text-sm--line-height));
-  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
@@ -500,9 +510,6 @@
     --tw-tracking: 2px;
     letter-spacing: 2px;
   }
-  .text-\[base\] {
-    color: base;
-  }
   .text-gray-800 {
     color: var(--color-gray-800);
   }
@@ -515,13 +522,57 @@
   .underline {
     text-decoration-line: underline;
   }
-  .ring {
-    --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
+  .shadow-md {
+    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-xl {
+    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .transition-shadow {
+    transition-property: box-shadow;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .transition-transform {
+    transition-property: transform, translate, scale, rotate;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
+  }
+  .hover\:scale-105 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 105%;
+        --tw-scale-y: 105%;
+        --tw-scale-z: 105%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:shadow-2xl {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
+  }
+  .hover\:shadow-xl {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
   }
   .max-sm\:hidden {
     @media (width < 40rem) {
@@ -560,11 +611,6 @@
       margin-inline: calc(var(--spacing) * 5);
     }
   }
-  .md\:mt-1 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 1);
-    }
-  }
   .md\:mt-10 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 10);
@@ -585,51 +631,15 @@
       padding-inline: calc(var(--spacing) * 6);
     }
   }
-  .md\:text-2xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-2xl);
-      line-height: var(--tw-leading, var(--text-2xl--line-height));
-    }
-  }
   .md\:text-xl {
     @media (width >= 48rem) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
-  .lg\:w-\[00px\] {
-    @media (width >= 64rem) {
-      width: 00px;
-    }
-  }
-  .lg\:w-\[000px\] {
-    @media (width >= 64rem) {
-      width: 000px;
-    }
-  }
-  .lg\:w-\[800px\] {
-    @media (width >= 64rem) {
-      width: 800px;
-    }
-  }
-  .lg\:w-\[900px\] {
-    @media (width >= 64rem) {
-      width: 900px;
-    }
-  }
   .lg\:w-\[950px\] {
     @media (width >= 64rem) {
       width: 950px;
-    }
-  }
-  .lg\:w-\[1000px\] {
-    @media (width >= 64rem) {
-      width: 1000px;
-    }
-  }
-  .lg\:w-\[1200px\] {
-    @media (width >= 64rem) {
-      width: 1200px;
     }
   }
 }
@@ -716,6 +726,25 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -737,6 +766,10 @@
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
       --tw-outline-style: solid;
+      --tw-duration: initial;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
     }
   }
 }
